[gd_scene load_steps=5 format=2]

[ext_resource path="res://popochiu/GraphicInterface/Inventory/InventoryContainer.gd" type="Script" id=1]
[ext_resource path="res://popochiu/GraphicInterface/Inventory/bg.png" type="Texture" id=2]
[ext_resource path="res://popochiu/GraphicInterface/Inventory/btn_discard_normal.png" type="Texture" id=3]
[ext_resource path="res://popochiu/GraphicInterface/Inventory/btn_discard_disabled.png" type="Texture" id=4]

[node name="InventoryContainer" type="NinePatchRect"]
margin_right = 50.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 16 )
mouse_filter = 0
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="InventoryPanel" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryGrid" type="GridContainer" parent="InventoryPanel"]
margin_left = 1.0
margin_top = 1.0
margin_right = 49.0
margin_bottom = 15.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="InventoryForeground" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 50.0
margin_bottom = 16.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="BtnDiscard" type="TextureButton" parent="."]
margin_left = -12.0
margin_top = 2.0
margin_right = -1.0
margin_bottom = 14.0
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
